Added datepicker controls to the start and end date inputs.

--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link type="text/css" rel="stylesheet" href="//cdn.jsdelivr.net/foundation/4.3.2/css/foundation.min.css" />
         <link type="text/css" rel="stylesheet" href="//cdn.jsdelivr.net/foundation/4.3.2/css/normalize.css" />
+        <link type="text/css" rel="stylesheet" href="//code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" />
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+        <script src="//code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
         <script src="//cdn.jsdelivr.net/foundation/4.3.2/js/foundation.min.js"></script>
         <script src="//cdn.jsdelivr.net/foundation/4.3.2/js/foundation/foundation.alerts.js"></script>
         <style>fieldset { margin-bottom: 1em; }</style>
