--- a/templates/history.html
+++ b/templates/history.html
@@ -2,6 +2,7 @@
 {% block heading %}History{% endblock %}
 
 {% block content %}
+<style>#type{margin-bottom:1em;}</style>
 <form method="post" action="/history" role="form">
     <div class="row">
         <div class="large-12 columns">
@@ -30,4 +31,5 @@
         </div>
     </div>
 </form>
+<script>$("#start_date, #end_date").datepicker({ dateFormat: "yy-mm-dd"});</script>
 {% endblock %}
